<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ListView
        android:id="@+id/lessonlistview_id"
        android:layout_width="match_parent"
        android:layout_height="335dp"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="3" />

    <CheckBox
        android:id="@+id/selectAllCheckBox"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:padding="5sp"
        android:text="@string/selectallcheckboxname" />

    <CheckBox
        android:id="@+id/defCheckBox_id"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:padding="5sp"
        android:text="@string/startondefinitionname" />

    <CheckBox
        android:id="@+id/lessonrandomcheckbox_id"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_gravity="center"
        android:padding="5sp"
        android:text="@string/randomcheckboxname" />

    <Spinner
        android:id="@+id/selectTypeSpinner_id"
        android:layout_width="169dp"
        android:layout_height="24dp"
        android:layout_gravity="center"
        android:textAlignment="center" />

    <Button
        android:id="@+id/lessonstudybutton_id"
        android:layout_width="279dp"
        android:layout_height="78dp"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_gravity="center"
        android:padding="5sp"
        android:text="@string/studybuttonname"
        android:textSize="24sp" />

</LinearLayout>