<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Quiz">

    <TextView
        android:id="@+id/questionTextView_id"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:gravity="center"
        android:text="TextView"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="88dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="344dp"
        android:layout_columnSpan="4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/quizRadioGroup_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/answersTitleTextView_id"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:text="TextView"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radioButton0_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="RadioButton" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <RadioButton
                    android:id="@+id/radioButton1_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="RadioButton" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <RadioButton
                    android:id="@+id/radioButton2_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="RadioButton" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <RadioButton
                    android:id="@+id/radioButton3_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="RadioButton" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

            </RadioGroup>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/quizBackButton_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:text="@string/backButtonName" />

    <Button
        android:id="@+id/quizNextButton_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="3"
        android:text="@string/nextButtonName" />

    <Button
        android:id="@+id/quizSelectButton_id"
        android:layout_width="155dp"
        android:layout_height="83dp"
        android:layout_row="2"
        android:layout_column="2"
        android:layout_gravity="center|top|center_vertical"
        android:text="@string/selectButtonName"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/correctincorrectTextView_id"
        android:layout_width="136dp"
        android:layout_height="58dp"
        android:layout_row="3"
        android:layout_column="2"
        android:layout_gravity="center|top"
        android:gravity="center"
        android:textSize="24sp" />

</GridLayout>